# ecommerce-chat

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/chroma/: client.py
backend/emb/: chroma.sqlite3
backend/services/agent/: agent.py  prompt.py  tools.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: theme-provider.tsx  theme-toggle.tsx
frontend/src/components/chat/: ChatLayout.tsx  ChatMessage.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: chat.ts
frontend/src/types/: index.ts
