[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "langchain[google-genai,groq]>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "langgraph>=0.5.2",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "aiosqlite>=0.21.0",
    "google-generativeai>=0.8.5",
]
